k8s/local/explorer-ui/mainnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-ui-mainnet-service
  namespace: chicmoz
spec:
  selector:
    app: explorer-ui-mainnet-label
  ports:
    - name: http-app
      protocol: TCP
      port: 80
      targetPort: http-app-port
