k8s/local/explorer-ui/mainnet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: explorer-ui-mainnet
  namespace: chicmoz
  labels:
    app.kubernetes.io/name: explorer-ui
    app.kubernetes.io/part-of: chicmoz-local
spec:
  parentRefs:
    - name: chicmoz-gateway
      sectionName: ui-mainnet
  hostnames:
    - mainnet.chicmoz.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: explorer-ui-mainnet-service
          port: 80
